--- a/index.html
+++ b/index.html
@@ -1,4 +1,34 @@
-ola, mundo!
-<html>
-	<h1>Titulo do mu site</h1>
-	<p>Meu parágrafo.Meu parágrafo.</p>
+<!DOCTYPE html>
+<html lang = "en">
+<head>
+	<title>Document</title>
+</head>
+<body>
+<h1> Olá, mundo de Desenvolvidor de sites </h1>
+<p>Grato, por começar a realizar um dos meus maiores sonhos na vida!</p>
+<br>
+<p> Notícias de Última Hora </p>
+
+<p> Desde a implantação da democracia, a Guiné-Bissau adotou o regime semipresidencialista para garantir a separação dos poderes legislativo, executivo e judiciário. <br> Essa escolha visa evitar a concentração excessiva de autoridade e promover uma administração democrática e inclusiva. No entanto, desde que Umaro Sissoco Embaló assumiu o palácio presidencial em fevereiro de 2020, uma tendência preocupante à centralização do poder tem ameaçado a estabilidade política e os direitos democráticos no país.
+Umaro Sissoco Embaló tem minado sistematicamente os princípios do regime semipresidencialista, concentrando o poder executivo em suas próprias mãos.<br> Suas nomeações violenta de primeiros-ministros demonstram um desrespeito pela Constituição e comprometem a divisão equilibrada de poderes. 
+Sua presidência é marcada por perseguições políticas, repressão e declarações sectárias. <br> Adversários políticos, ativistas e cidadãos críticos enfrentam detenções arbitrárias e intimidações.<br> Hoje, 18/05/2024, os  manifestantes convocado pelo Movimento Frente Popular, incluindo o seu coordenador Dr. Armando Lona, foram detidos, evidenciando a intolerância à dissidência.
+
+Essas detenções levantam questões cruciais:<br>
+1. Quem ordenou as detenções? <br>
+2. Qual foi o motivo específico das detenções? <br>
+3. Por que os detidos foram levados ao palácio presidencial, um lugar que não tem jurisdição judicial? <br>
+
+A resposta é clara: as detenções foram ordenadas por Umaro Sissoco Embaló. <br> De salientar que mesmo que houvessem cometido algum delito, não deveriam em nenhum momento serem conduzidos ao palácio presidencial, pois este não é um órgão judiciário e não possui competência para tal.
+
+Essa repressão cria um ambiente de medo e silenciamento, ameaçando constantemente a liberdade de expressão. <br> No entanto, é importante lembrar que na Guiné-Bissau, nunca nos resignamos à opressão.<br> Nossos combatentes lutaram gloriosamente contra o regime fascista português para conquistar a independência, e não abandonaremos essa luta pela liberdade.
+A censura à imprensa e a intimidação de jornalistas são práticas comuns sob a presidência de Embaló. <br> A corrupção tornou-se ainda mais desenfreada, desviando recursos públicos enquanto a população enfrenta crescente pobreza, aumento de produtos de primeira necessidade(arroz...), mã campanha de comercialização de castanha de cajú  e desemprego. As eleições, um momento de expressão livre da vontade popular, foram comprometidas por Embaló, que dissolveu o parlamento ilegalmente, violando a Constituição (Art.94).
+A Guiné-Bissau encontra-se em um momento crítico, onde a democracia e os direitos humanos estão sob séria ameaça devido à presidência  do  Umaro Sissoco Embaló.<br> A centralização do poder, a repressão política, a corrupção e o desrespeito à vontade popular são evidências claras de um regime ditatorial em formação. É imperativo que todos os setores da sociedade se mobilizem para defender os princípios democráticos e restaurar a ordem constitucional no país.
+A luta por uma Guiné-Bissau mais justa, democrática e respeitadora dos direitos humanos deve continuar. <br> É a responsabilidade de todos garantir que o país retorne ao caminho da democracia e da justiça social.
+
+A luta é a minha vida. Continuarei a lutar pela liberdade até o fim dos meus dias. (Nelson Mandela).<p>
+<h1> UMARO SISSOKO EMBALÓ</h1>
+
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWSgDbm_cTmJaQTfU3gtkV6fPxOWKZV5gfCxoKdp_1NFp7S1q8" />
+
+</body>
+</html>
